@@ -515,6 +515,9 @@ Release 0.20.2 - Unreleased
     HDFS-793. Data node should receive the whole packet ack message before it
     constructs and sends its own ack message for the packet. (hairong)
 
+    HDFS-185. Disallow chown, chgrp, chmod, setQuota, and setSpaceQuota when
+    name-node is in safemode. (Ravi Phulari via shv)
+
 Release 0.20.1 - 2009-09-01
 
   IMPROVEMENTS
